--- a/client/src/styles/base/_layout.scss
+++ b/client/src/styles/base/_layout.scss
@@ -26,6 +26,9 @@
     @media(max-width: 767px){
         padding: 80px 0;
     }
+    @media(max-width: 500px){
+        padding: 60px 0;
+    }
 }
 
 .overlapped {
@@ -83,5 +86,15 @@
     @media(max-width: 767px){
         font-size: 9rem;
         letter-spacing: 4px;
+    }
+    @media(max-width: 500px){
+        font-size: 6rem;
+        letter-spacing: 2px;
+        left: -20px
+    }
+    @media(max-width: 375px){
+        font-size: 5rem;
+        left: -10px;
+        top: 17px;
     }
 }
