--- a/client/src/styles/components/_blogs-carousel.scss
+++ b/client/src/styles/components/_blogs-carousel.scss
@@ -29,6 +29,9 @@
                     font-size: 7rem;
                     letter-spacing: 2px;
                 }
+                @media(max-width: 500px){
+                    font-size: 5rem;
+                }
             }
         }
         p {
